fix: gallery gap set to 1rem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -537,7 +537,7 @@ button[type=submit] {
 #gallery {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2%;
+    gap: 1rem;
     background: var(--white);
     padding: 1%;
     margin: 1rem;
@@ -653,14 +653,6 @@ button[type=submit] {
 
     .text-right {
         text-align:right;
-    }
-}
-
-/* GALLERY MEDIA QUERIES */
-
-@media screen and (min-width: 670px) {
-    #gallery {
-        gap:2%
     }
 }
 
